# IMAS-Data-Dictionary

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  README.md  dd_data_dictionary.xml.xsd  dd_data_dictionary.xml.xsl  dd_data_dictionary_validation.txt.xsl  generate.py  install.py  pyproject.toml  setup.py
.github/workflows/: pr_diff.yml  pr_diff_comment_on_pr.yml  publish_pypi.yml  push-to-archive.yml  test.yml  test_make.yml
b_field_non_axisymmetric/: dd_b_field_non_axisymmetric.xsd
data_dictionary/: idsinfo.py
docs/: IDS-path-syntax.rst  IMAS-URI-scheme.rst  cocos.rst  data_dictionary_glossary.rst  dd_developer_guide.rst  dm_rules_guidelines.rst  intro.rst  lifecycle.rst
docs/sphinx_dd_extension/: autodoc.py
html_documentation/: dd_versions.html
imas_data_dictionary/: __init__.py  dd_doc.py  idsinfo.py
imas_data_dictionary/test/: test_resources.py
lh_antennas/: dd_lh_antennas.xsd
sawteeth/: dd_sawteeth.xsd
schemas/b_field_non_axisymmetric/: dd_b_field_non_axisymmetric.xsd
schemas/balance_of_plant/: dd_balance_of_plant.xsd
schemas/bolometer/: camera_identifier.xml  dd_bolometer.xsd
schemas/breeding_blanket/: dd_breeding_blanket.xsd
schemas/camera_ir/: dd_camera_ir.xsd
schemas/camera_x_rays/: dd_camera_x_rays.xsd
schemas/charge_exchange/: dd_charge_exchange.xsd
schemas/distributions/: dd_distributions.xsd
schemas/divertors/: dd_divertors.xsd
schemas/ec_launchers/: dd_ec_launchers.xsd  frame_DOF_identifier.xml
schemas/edge_profiles/: dd_edge_profiles.xsd
schemas/edge_sources/: edge_source_identifier.xml
schemas/edge_transport/: dd_edge_transport.xsd
schemas/equilibrium/: dd_equilibrium.xsd
schemas/focs/: dd_focs.xsd
schemas/gyrokinetics_local/: dd_gyrokinetics_local.xsd
schemas/lh_antennas/: dd_lh_antennas.xsd
schemas/magnetics/: dd_magnetics.xsd  magnetics_flux_loop_type_identifier.xml
schemas/nbi/: dd_nbi.xsd
schemas/neutron_diagnostic/: dd_neutron_diagnostic.xsd  neutron_algorithm_identifier.xml
schemas/operational_instrumentation/: dd_operational_instrumentation.xsd
schemas/pf_active/: dd_pf_active.xsd
schemas/pf_passive/: dd_pf_passive.xsd
schemas/plasma_initiation/: dd_plasma_initiation.xsd
schemas/plasma_profiles/: dd_plasma_profiles.xsd
schemas/plasma_sources/: plasma_source_identifier.xml
schemas/plasma_transport/: dd_plasma_transport.xsd
schemas/runaway_electrons/: dd_runaway_electrons.xsd
schemas/sawteeth/: dd_sawteeth.xsd
schemas/spectrometer_visible/: dd_spectrometer_visible.xsd
schemas/spi/: dd_spi.xsd
schemas/summary/: dd_summary.xsd
schemas/tf/: dd_tf.xsd
schemas/thomson_scattering/: dd_thomson_scattering.xsd
schemas/transport_solver_numerics/: dd_transport_solver_numerics.xsd
schemas/utilities/: dd_support.xsd  distribution_source_identifier.xml  materials_identifier.xml  occurrence_type_identifier.xml
schemas/wall/: dd_wall.xsd
spectrometer_visible/: dd_spectrometer_visible.xsd
spi/: dd_spi.xsd
utilities/: dd_support.xsd
